--- a/lab1/732a74-la1-2021.ipynb
+++ b/lab1/732a74-la1-2021.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "__Student I:__ marlu207 (Martynas Lukosevicius)\n",
     "\n",
-    "__Student II:__ abcde123 (Alejo Perez Gomez)"
+    "__Student II:__ alepe026 (Alejo Perez Gomez)"
    ]
   },
   {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        " 'zfill']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
        "66"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'It is dead, that is what is wrong with it. This is an ex-\"Parrot\"!It is dead, that is what is wrong with it. This is an ex-\"Parrot\"!'"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parrot + parrot\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=blue>It would merely chance the string but the actual value of the variable parrot didn't change</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -251,13 +278,12 @@
        "'It is dead, that is what is wrong with it. This is an ex-\"Parrot\"!'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "parrot + parrot\n",
     "parrot"
    ]
   },
@@ -270,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +318,7 @@
        " 'ex-\"Parrot\"!']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +346,7 @@
        "'It is dead, that is what is wrong with it. This is an ex-\"Parrot\"!'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +373,7 @@
        "'The length of parrot_info is 66'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +449,7 @@
        "328350"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,9 +479,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nBefore a loop iteration:\\nfirst_n_squared = sum over 0 to i of  x_(i-1)^2\\nAfter: \\nfirst_n_squared = sum over 0 to i of  x_(i)^2\\n\\nContributed: before a loop iteration - after loop iteration = x_(i)^2\\n'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Before a loop iteration:\n",
@@ -492,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +538,7 @@
        "44"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,9 +563,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nBefore a loop iteration:\\ni = current iteration\\ncount_of_letters = number of letters until i index\\nAfter: \\ni = current iteration + 1\\ncount_of_letters = (count_of_letters before loop + 1) if its a letter in possition 1, other wise (count_of_letters before loop)\\n\\nContributed:\\ni = i+1 \\ncount_of_letters +1 if character is a letter \\n'"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Before a loop iteration:\n",
@@ -562,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +649,7 @@
        "[5, 5, 6, 4]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +713,7 @@
        "99"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +742,7 @@
        "328350"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +773,7 @@
        "['long', 'long', 'long', 'short']"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +801,7 @@
        "44"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +837,7 @@
        "'old html'"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -885,16 +933,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\nReplace this comment (actually, a useless string expression) with \\nyour answer to the question above.\\n'"
+       "(1, 1, 1, 2)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,10 +952,60 @@
     "two = (1,2)   # Change this\n",
     "two_list = [1, 2]\n",
     "\n",
-    "one + two\n",
+    "one + two\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "variable two_list reversed: [2, 1]\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'reverse'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-79-05ecf925196d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mtwo_list\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreverse\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"variable two_list reversed: {two_list}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mone\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreverse\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'reverse'"
+     ]
+    }
+   ],
+   "source": [
+    "two_list.reverse()\n",
+    "print(f\"variable two_list reversed: {two_list}\")\n",
+    "one.reverse()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\ntuples are immutable meaning that we cant change values after they are assigned, lists are mutable.\\nAs shown above, two_list can use the method reverse() but this is impossible for tuples because thery're immutable.\\n\""
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "\n",
     "\"\"\"\n",
-    "tuples are immutable meaning that we cant change values after they are assigned, lists are mutable. \n",
+    "tuples are immutable meaning that we cant change values after they are assigned, lists are mutable.\n",
+    "As shown above, two_list can use the method reverse() but this is impossible for tuples because thery're immutable.\n",
     "\"\"\"\n"
    ]
   },
@@ -927,14 +1025,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "It's odd!\n"
+      "Its even!\n"
      ]
     }
    ],
@@ -956,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +1063,7 @@
        "True"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -999,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1106,7 @@
        "True"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1152,7 @@
        "True"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1087,16 +1185,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The random number is smaller than 0.9\n",
-      "The random number is smaller than 0.9\n",
-      "The random number is smaller than 0.9\n",
       "The random number is smaller than 0.9\n",
       "The random number is smaller than 0.9\n",
       "The random number is smaller than 0.9\n",
@@ -1136,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1240,7 @@
        "{'sex': 'male', 'Algebra': 8, 'History': 13}"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1190,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1294,7 @@
        "13"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1322,7 @@
        "{'sex': 'male', 'Algebra': 14, 'History': 10}"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1252,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1282,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1291,7 +1386,7 @@
        "{'Tesco': 'long', 'Forex': 'long', 'Alonzo': 'long', 'Zeno': 'short'}"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1331,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1368,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1402,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1438,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1451,7 +1546,7 @@
        " 'Karl': {'sex': 'Male', 'Algebra': '14', 'History': '10'}}"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1474,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1482,6 +1577,63 @@
     "    for k,v in dict.items():\n",
     "        file.write(f\"Student {k} scored {v['Algebra']} on the Algebra exam and {v['History']} on the History exam \\n\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch master\n",
+      "Your branch is up to date with 'origin/master'.\n",
+      "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
+      "\tmodified:   .ipynb_checkpoints/732a74-la1-2021-checkpoint.ipynb\n",
+      "\tmodified:   732a74-la1-2021.ipynb\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m \"Final\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Everything up-to-date\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1500,7 +1652,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
