--- a/Lab2/732a74-la2-functions-2021.ipynb
+++ b/Lab2/732a74-la2-functions-2021.ipynb
@@ -8,11 +8,16 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "---\n",
-    "**Student:** abcdef123\n",
+    "**Student:** marlu207\n",
     "\n",
     "**Student:** ghijk456\n",
     "\n",
@@ -75,10 +80,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "314.1592653589793"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "def circle_area(radius):\n",
+    "   return math.pi * (radius**2)\n",
+    "\n",
+    "\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,7 +123,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "circle_area(10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -113,7 +139,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "circle_area(radius = 10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -138,10 +166,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The radius must be positive\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "314.1592653589793"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def circle_area_safe(radius):\n",
+    "    if radius<0:\n",
+    "        print(\"The radius must be positive\")\n",
+    "        return None\n",
+    "    else:\n",
+    "        return circle_area(radius)\n",
+    "    \n",
+    "circle_area_safe(-4)\n",
+    "circle_area_safe(10)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -152,10 +208,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "radius can't be negative",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-5d64f2d775bb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mcircle_area\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mradius\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mcircle_area_safer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-10-5d64f2d775bb>\u001b[0m in \u001b[0;36mcircle_area_safer\u001b[1;34m(radius)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcircle_area_safer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mradius\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mradius\u001b[0m\u001b[1;33m<\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"radius can't be negative\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: radius can't be negative"
+     ]
+    }
+   ],
+   "source": [
+    "def circle_area_safer(radius):\n",
+    "    if radius<0:\n",
+    "        raise ValueError(\"radius can't be negative\")\n",
+    "        return None\n",
+    "    else:\n",
+    "        return circle_area(radius)\n",
+    "    \n",
+    "circle_area_safer(-4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -166,13 +244,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your definition goes here.\n",
+    "def print_num_args(*args):\n",
+    "    return(len(args))\n",
     "\n",
     "print_num_args(\"a\", \"b\", \"c\")  # Should print the number 3."
    ]
@@ -186,14 +277,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The 2 regular argumets are:\n",
+      "0: alonzo\n",
+      "1: zeno\n",
+      "And the keyword arguments are:\n",
+      "foo is set to 2\n",
+      "bar is set to 99\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Should print:\\n\\nThe 2 regular arguments are:\\n0: alonzo\\n1: zeno\\n\\nAnd the keyword arguments are (the ordering here is arbitrary):\\nfoo is set to 2\\nbar is set to 99\\n'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your definition goes here\n",
-    "pass\n",
+    "def print_kwargs(*args, **kwargs):\n",
+    "    print(f\"The {len(args)} regular argumets are:\")\n",
+    "    [print(f\"{i}: {value}\") for i, value in enumerate(args)]\n",
+    "    print(\"And the keyword arguments are:\")\n",
+    "    [print(f\"{key} is set to {kwargs[key]}\") for key in kwargs]\n",
+    "\n",
     "\n",
     "print_kwargs(\"alonzo\", \"zeno\", foo=1+1,bar = 99)\n",
     "\"\"\"Should print:\n",
@@ -217,20 +336,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "def my_polynomial(x):\n",
     "    \"\"\"Return the number x^2 + 30x + 225.\"\"\"\n",
-    "    print(x**2 + 30*x + 225)\n",
+    "    return x**2 + 30*x + 225\n",
     "\n",
     "polyval = my_polynomial(100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,11 +358,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your answer as a code comment here. "
+    "# print returns variable of type NoneType and ,\n",
+    "# function \"*\" is not implemeted for NoneType and int. Instead of printing, number should be returned"
    ]
   },
   {
@@ -326,10 +446,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "import math \n",
+    "\n",
+    "def pi_simulation():\n",
+    "    \"\"\"prints pi and tau= 2*pi values calculated by monte carlo method\"\"\"\n",
+    "    \n",
+    "    print(\"Welcome to the Monty Carlo PI program! \\n\")\n",
+    "    \n",
+    "    # main program loop \n",
+    "    while True:\n",
+    "        input_value = input(\"\\nPlease enter a number of points (or the letter 'q' to quit):\")\n",
+    "        \n",
+    "        # to quit or not\n",
+    "        if input_value.lower() == \"q\":\n",
+    "            print(\"Thank you for choosing Monty Carlo.\")\n",
+    "            break\n",
+    "        else :\n",
+    "            number_of_numbers = int(input_value)\n",
+    "        \n",
+    "        # number generator\n",
+    "        more_than_one  = 0\n",
+    "        for i in range(number_of_numbers):\n",
+    "            euclidean_distance = math.sqrt(random.uniform(0,1)**2 + random.uniform(0,1)**2)\n",
+    "            if euclidean_distance > 1:\n",
+    "                more_than_one +=1\n",
+    "        \n",
+    "        # results\n",
+    "        pi = 4*(number_of_numbers-more_than_one) / number_of_numbers\n",
+    "        print(f\"Using {n} points we (this time) got the following value for pi: {pi}\")\n",
+    "        print(f\"This would mean that tau (2xPI) would be: {2*pi}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -347,12 +498,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.013070918073073227\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_relative_error = 0\n",
+    "for i in range(100):\n",
+    "\n",
+    "        number_of_numbers = 10000\n",
+    "        \n",
+    "        # number generator\n",
+    "        more_than_one  = 0\n",
+    "        for i in range(number_of_numbers):\n",
+    "            euclidean_distance = math.sqrt(random.uniform(0,1)**2 + random.uniform(0,1)**2)\n",
+    "            if euclidean_distance > 1:\n",
+    "                more_than_one +=1\n",
+    "        \n",
+    "        # results\n",
+    "        pi = (4*(number_of_numbers-more_than_one) / number_of_numbers)\n",
+    "        relative_error = (pi - math.pi) / pi\n",
+    "        if relative_error > max_relative_error:\n",
+    "            max_relative_error = relative_error\n",
+    "        \n",
+    "print(max_relative_error)\n",
+    "\n",
+    "## error is smaller than 5%"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -384,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,8 +596,9 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    " Write your answers here.\n",
-    "\n",
+    "in update_results function naming of i could be changed to \"value\" as it is a number and not an index. \n",
+    "in sum_squares method when calling update_results parameters could be passed using argument names.  \n",
+    "not checking if n is a positive number.\n",
     "\"\"\""
    ]
   },
